--- a/Vault.HealthMonitor.LogFilesFiltering/Vault.HealthMonitor.LogFilesFiltering.csproj
+++ b/Vault.HealthMonitor.LogFilesFiltering/Vault.HealthMonitor.LogFilesFiltering.csproj
@@ -120,7 +120,9 @@
     <None Include="Vault.HealthMonitor.LogFilesFiltering_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Package.StoreAssociation.xml" />
+    <None Include="Package.StoreAssociation.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
