--- a/.gitignore
+++ b/.gitignore
@@ -181,7 +181,7 @@ rcf/
 # Windows Store app package directories and files
 AppPackages/
 BundleArtifacts/
-Package.StoreAssociation.xml
+# Package.StoreAssociation.xml
 _pkginfo.txt
 
 # Visual Studio cache files
